Implement forgotPassword and changePassword endpoints, add support for password reset and user notifications. Modification on some endpoints